--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,11 @@
         <mkdir dir="${sources}" />
 
         <!-- Compile the java code from ${src} into ${tmp} -->
-        <javac srcdir="${src}" destdir="${tmp}" debug="on">
+	<javac srcdir="${src}"
+	    destdir="${tmp}"
+	    debug="on"
+	    source="1.5"
+	    target="1.5">
             <classpath refid="external_jars" />
             <compilerarg value="-Xlint:unchecked" />
         </javac>
